# Marcide

./: .gitignore  Cargo.toml  README.md  build.rs  code_editor_source_code.marci  icoswap.cmd
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
marcideico/: maricde.kra
src/: app.rs  lib.rs  main.rs  oldapp.rs
src/app/: appactions.rs  cmdmod.rs  code_editor.rs  file_handling.rs  richpresence.rs  terminal.rs  win_handling.rs
src/app/richpresence/dependencies/: mod.rs
