[package]
name = "marcide"
version = "0.1.0"
authors = ["Varga Marcell, for the code editor widget : Cherry"]
edition = "2021"
rust-version = "1.65"
rfd = "0.11.4"



[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = "1.0"
rfd = "0.11.4"
windows = "0.48.0"
syntect = "5"
enum-map = { version = "2.6.0", features = ["serde"] }
mpsc = "0.2.0"
chrono = "0.4.26"
dirs = "5.0.1"
rand = "0.8.5"
stopwatch = "0.0.7"



[dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

