[package]
build = "build.rs"
name = "marcide"
version = "2.2.3"
authors = ["Varga Marcell <marci1175>"]
edition = "2021"
rust-version = "1.65"
rfd = "0.11.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = "1.0.177"
rfd = "0.11.4"
windows = "0.48.0"
syntect = "5"
enum-map = { version = "2.6.0", features = ["serde"] }
mpsc = "0.2.0"
chrono = "0.4.26"
dirs = "5.0.1"
rand = "0.8.5"
tracing = "0.1.37"
byteorder = "1.4.3"
bytes = "1.4.0"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.8"
named_pipe = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
parking_lot = "0.12.1"
serde_json = "1.0.104"
strum = "0.25.0"
thiserror = "1.0.44"
uuid = "1.4.1"
ctrlc = "3.4.0"
webbrowser = "0.8.10"
discord-sdk = "0.3.4"
tokio = {version = "1.29.1", features = ["full"]}
anyhow = "1.0.72"
tracing-subscriber = "0.3"
embed-resource = "2.2.0"
simulate = "0.3.0"
winres = "0.1.12"


[build-dependencies]
skeptic = "0.13"


[dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]


[package.metadata.winres]
LegalCopyright = "Copyright © 2023"
ProductVersion = "2.2.3"